--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -4804,21 +4804,40 @@
     "    regr_results = sm.OLS.from_formula('mosquitos ~ temperature + rainfall', data).fit()\n",
     "    print(regr_results.tvalues)\n",
     "    \n",
-    "    #\n",
+    "    figure = plt.figure(figsize=(6, 9))\n",
     "\n",
-    "    figure = plt.figure()\n",
-    "\n",
-    "    ax = figure.add_subplot(1, 1, 1)\n",
+    "    # plot predicted vs. measured mosquito populations from fitted model \n",
+    "    ax0 = figure.add_subplot(3, 1, 1)\n",
     "\n",
     "    parameters = regr_results.params\n",
     "    predicted = (parameters['Intercept'] + \n",
     "                 parameters['temperature'] * data['temperature'] + \n",
     "                 parameters['rainfall'] * data['rainfall'])\n",
     "\n",
-    "    ax.plot(predicted, data['mosquitos'], 'ro')\n",
+    "    ax0.plot(predicted, data['mosquitos'], 'ro')\n",
     "\n",
-    "    ax.set_xlabel('predicted mosquito population')\n",
-    "    ax.set_ylabel('measured mosquito population')"
+    "    ax0.set_xlabel('predicted mosquito population')\n",
+    "    ax0.set_ylabel('measured mosquito population')\n",
+    "    \n",
+    "    # plot mosquitos vs.\n",
+    "    ax1 = fig.add_subplot(2, 1, 1)\n",
+    "\n",
+    "    ax1.plot(data['temperature'], data['mosquitos'], 'ro')\n",
+    "    ax1.set_xlabel('temperature')\n",
+    "    ax1.set_ylabel('mosquitos')\n",
+    "\n",
+    "    ax2 = fig.add_subplot(2, 1, 2)\n",
+    "\n",
+    "    ax2.plot(data['rainfall'], data['mosquitos'], 'bs')\n",
+    "    ax2.set_xlabel('rainfall')\n",
+    "    ax2.set_ylabel('mosquitos')\n",
+    "    \n",
+    "    # adjust layout of axes according to label placement\n",
+    "    plt.tight_layout()\n",
+    "    \n",
+    "    # tell matplotlib to render the figure NOW\n",
+    "    plt.show()\n",
+    "    "
    ]
   }
  ],
