--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -4946,6 +4946,22 @@
     "    plt.show()\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Writing functions: we need to break things up"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
