--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -4961,7 +4961,10 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def square(x):\n",
+    "    x_squared = x**2"
+   ]
   }
  ],
  "metadata": {
