--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -5020,6 +5020,15 @@
    "source": [
     "square(square(2))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
