--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -5023,12 +5023,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def square(x):\n",
+    "    \"\"\"Return the square of the value of `x`.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    x : float\n",
+    "        Number to obtain the square of.\n",
+    "        \n",
+    "    Returns\n",
+    "    -------\n",
+    "    square : float\n",
+    "        The square of `x`.\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    return x**2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "square?"
+   ]
   }
  ],
  "metadata": {
