--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -5056,6 +5056,46 @@
    "source": [
     "square?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function square in module __main__:\n",
+      "\n",
+      "square(x)\n",
+      "    Return the square of the value of `x`.\n",
+      "    \n",
+      "    Parameters\n",
+      "    ----------\n",
+      "    x : float\n",
+      "        Number to obtain the square of.\n",
+      "        \n",
+      "    Returns\n",
+      "    -------\n",
+      "    square : float\n",
+      "        The square of `x`.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(square)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Challenge: write your fahrenheit to celsius conversion as a function that takes temperature in fahrenheit and converts them to temperatures in celsius"
+   ]
   }
  ],
  "metadata": {
