--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -5091,6 +5091,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "square??"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
