--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -5102,6 +5102,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pd.read_csv??"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
