--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -5107,6 +5107,31 @@
    "source": [
     "### Challenge: write your fahrenheit to celsius conversion as a function that takes temperature in fahrenheit and converts them to temperatures in celsius"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def fahrenheit_to_celsius(temp):\n",
+    "    \"\"\"Convert temperature in fahrenheit to temperature in celsius.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    temp : float or array_like\n",
+    "        Temperature(s) in fahrenheit.\n",
+    "    \n",
+    "    Returns\n",
+    "    -------\n",
+    "    float or array_like\n",
+    "        Temperature(s) in celsius.\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
