--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -5110,7 +5110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "collapsed": true
    },
@@ -5130,7 +5130,7 @@
     "        Temperature(s) in celsius.\n",
     "    \n",
     "    \"\"\"\n",
-    "    "
+    "    return (temp - 32) * 5/9"
    ]
   }
  ],
