--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -5260,6 +5260,13 @@
    "source": [
     "fahrenheit_to_celsius(data['temperature'])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Challenge: write a function that prints the t-value for temperature and rainfall, and plots the statsmodel results (predicted vs. measured mosquito population) along with plots for the relationships between mosquitos and temperature and mosquitos and rainfall separately"
+   ]
   }
  ],
  "metadata": {
