--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -5265,6 +5265,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This function is written in such a way that it works for both single values and arrays/Series/DataFrames. This behavior is often referred to as \"duck-typing\", in which different objects behave in e"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Challenge: write a function that prints the t-value for temperature and rainfall, and plots the statsmodel results (predicted vs. measured mosquito population) along with plots for the relationships between mosquitos and temperature and mosquitos and rainfall separately"
    ]
   }
