--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -5265,7 +5265,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This function is written in such a way that it works for both single values and arrays/Series/DataFrames. This behavior is often referred to as \"duck-typing\", in which different objects behave in expected ways such that we can write code that works with them all."
+    "This function is written in such a way that it works for both single values and arrays/Series/DataFrames. This behavior is often referred to as \"duck-typing\", in which different objects behave in expected ways such that we can write code that works with them all. That is, if it looks like a duck and quacks like a duck, the code can assume it's a duck."
    ]
   },
   {
