--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -5274,6 +5274,28 @@
    "source": [
     "### Challenge: write a function that prints the t-value for temperature and rainfall, and plots the statsmodel results (predicted vs. measured mosquito population) along with plots for the relationships between mosquitos and temperature and mosquitos and rainfall separately"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def analyze(data):\n",
+    "    \"\"\"Return panel plot of mosquito population vs. temperature, rainfall.\n",
+    "    \n",
+    "    Also prints t-values for temperature and rainfall.\n",
+    "    \n",
+    "    Panel plot gives:\n",
+    "        1. comparison of modeled values of mosquito population\n",
+    "           vs. measured values\n",
+    "        2. mosquito population vs. average temperature\n",
+    "        3. mosquito population vs. total rainfall\n",
+    "    \n",
+    "    \"\"\""
+   ]
   }
  ],
  "metadata": {
