--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -5528,6 +5528,15 @@
     "    \n",
     "    plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
