--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -5531,12 +5531,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import datastuff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "datastuff.fahrenheit_to_celsius?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv('A2_mosquito_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     27.777778\n",
+       "1     21.111111\n",
+       "2     31.666667\n",
+       "3     23.333333\n",
+       "4     25.555556\n",
+       "5     29.444444\n",
+       "6     30.000000\n",
+       "7     23.888889\n",
+       "8     21.111111\n",
+       "9     30.000000\n",
+       "10    28.333333\n",
+       "11    25.555556\n",
+       "12    30.555556\n",
+       "13    24.444444\n",
+       "14    30.000000\n",
+       "15    32.222222\n",
+       "16    24.444444\n",
+       "17    30.555556\n",
+       "18    31.111111\n",
+       "19    30.555556\n",
+       "20    27.222222\n",
+       "21    23.333333\n",
+       "22    29.444444\n",
+       "23    21.666667\n",
+       "24    26.666667\n",
+       "25    22.222222\n",
+       "26    24.444444\n",
+       "27    29.444444\n",
+       "28    28.333333\n",
+       "29    30.000000\n",
+       "30    27.777778\n",
+       "31    25.000000\n",
+       "32    23.333333\n",
+       "33    21.111111\n",
+       "34    25.000000\n",
+       "35    31.666667\n",
+       "36    28.333333\n",
+       "37    26.666667\n",
+       "38    30.000000\n",
+       "39    22.222222\n",
+       "40    26.111111\n",
+       "41    29.444444\n",
+       "42    30.000000\n",
+       "43    22.222222\n",
+       "44    25.555556\n",
+       "45    21.666667\n",
+       "46    31.111111\n",
+       "47    26.111111\n",
+       "48    22.777778\n",
+       "49    30.000000\n",
+       "50    30.555556\n",
+       "Name: temperature, dtype: float64"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datastuff.fahrenheit_to_celsius(data['temperature'])"
+   ]
   }
  ],
  "metadata": {
