--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -5769,6 +5769,13 @@
    "source": [
     "datastuff.analyze(data)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Coffee break! Meet back in here at 10:55"
+   ]
   }
  ],
  "metadata": {
