--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -5695,6 +5695,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We need to force the pyton session to build a new module object for `datastuff`; by default new imports use the existing module object, which was built from our file before we fixed the imports."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 73,
    "metadata": {
