--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -5660,6 +5660,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We forgot to add the needed imports (`statsmodels`, `matplotlib`) to the top of the file so the functions ne"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 71,
    "metadata": {
