--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -5663,7 +5663,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We forgot to add the needed imports (`statsmodels`, `matplotlib`) to the top of the file so the functions ne"
+    "We forgot to add the needed imports (`statsmodels`, `matplotlib`) to the top of the file so the functions know what `sm` and `plt` are."
    ]
   },
   {
