--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -5790,6 +5790,15 @@
    "source": [
     "### Coffee break! Meet back in here at 10:55"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
