--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -5792,13 +5792,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## An aside: combining DataFrames"
+   ]
   }
  ],
  "metadata": {
