--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -5797,6 +5797,18 @@
    "source": [
     "## An aside: combining DataFrames"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import glob"
+   ]
   }
  ],
  "metadata": {
