--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -5800,7 +5800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 77,
    "metadata": {
     "collapsed": true
    },
@@ -5808,6 +5808,23 @@
    "source": [
     "import pandas as pd\n",
     "import glob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "filenames = glob.glob('*.csv')\n",
+    "datas = []\n",
+    "\n",
+    "for filename in filenames:\n",
+    "    datas.append(pd.read_csv(filename))\n",
+    "    \n",
+    "df = pd."
    ]
   }
  ],
