--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -5812,7 +5812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 83,
    "metadata": {
     "collapsed": false
    },
@@ -5820,21 +5820,21 @@
     {
      "data": {
       "text/plain": [
-       "'B1_mosquito_data.csv'"
+       "'B1'"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "filename.split"
+    "filename.split('_')[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 84,
    "metadata": {
     "collapsed": true
    },
@@ -5845,15 +5845,15 @@
     "keys = []\n",
     "\n",
     "for filename in filenames:\n",
-    "    \n",
+    "    keys.append(filename.split('_')[0])\n",
     "    datas.append(pd.read_csv(filename))\n",
     "    \n",
-    "df = pd.concat(datas)"
+    "df = pd.concat(datas, keys=keys, names=['location'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 85,
    "metadata": {
     "collapsed": false
    },
@@ -5866,14 +5866,24 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th></th>\n",
        "      <th>year</th>\n",
        "      <th>temperature</th>\n",
        "      <th>rainfall</th>\n",
        "      <th>mosquitos</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>location</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th rowspan=\"10\" valign=\"top\">A1</th>\n",
        "      <th>0</th>\n",
        "      <td>2001</td>\n",
        "      <td>80</td>\n",
@@ -5944,6 +5954,7 @@
        "      <td>184</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th rowspan=\"20\" valign=\"top\">A3</th>\n",
        "      <th>0</th>\n",
        "      <td>1960</td>\n",
        "      <td>76</td>\n",
@@ -6085,12 +6096,14 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th rowspan=\"30\" valign=\"top\">B1</th>\n",
        "      <th>21</th>\n",
        "      <td>1981</td>\n",
        "      <td>77</td>\n",
@@ -6306,73 +6319,74 @@
        "</div>"
       ],
       "text/plain": [
-       "    year  temperature  rainfall  mosquitos\n",
-       "0   2001           80       157        150\n",
-       "1   2002           85       252        217\n",
-       "2   2003           86       154        153\n",
-       "3   2004           87       159        158\n",
-       "4   2005           74       292        243\n",
-       "5   2006           75       283        237\n",
-       "6   2007           80       214        190\n",
-       "7   2008           85       197        181\n",
-       "8   2009           74       231        200\n",
-       "9   2010           74       207        184\n",
-       "0   1960           76       191         93\n",
-       "1   1961           73       249        109\n",
-       "2   1962           81       112         73\n",
-       "3   1963           78       113         72\n",
-       "4   1964           81       159         89\n",
-       "5   1965           87       222        109\n",
-       "6   1966           72       103         68\n",
-       "7   1967           77       176         92\n",
-       "8   1968           89       236        114\n",
-       "9   1969           88       283        128\n",
-       "10  1970           89       151         89\n",
-       "11  1971           71       121         72\n",
-       "12  1972           88       267        124\n",
-       "13  1973           85       211        102\n",
-       "14  1974           75       101         67\n",
-       "15  1975           72       173         85\n",
-       "16  1976           74       254        117\n",
-       "17  1977           85       155         90\n",
-       "18  1978           89       158         92\n",
-       "19  1979           86       117         75\n",
-       "..   ...          ...       ...        ...\n",
-       "21  1981           77       115         77\n",
-       "22  1982           71       267        106\n",
-       "23  1983           89       164         99\n",
-       "24  1984           75       175         90\n",
-       "25  1985           70       210         95\n",
-       "26  1986           72       214         99\n",
-       "27  1987           79       123         81\n",
-       "28  1988           74       195         96\n",
-       "29  1989           84       129         90\n",
-       "30  1990           80       276        111\n",
-       "31  1991           73       147         82\n",
-       "32  1992           73       140         80\n",
-       "33  1993           78       285        115\n",
-       "34  1994           71       280        107\n",
-       "35  1995           80       180         95\n",
-       "36  1996           90       280        119\n",
-       "37  1997           86       166        100\n",
-       "38  1998           82       285        117\n",
-       "39  1999           75       215        101\n",
-       "40  2000           86       212        101\n",
-       "41  2001           72       138         83\n",
-       "42  2002           84       130         85\n",
-       "43  2003           74       166         87\n",
-       "44  2004           87       280        121\n",
-       "45  2005           85       130         88\n",
-       "46  2006           83       102         77\n",
-       "47  2007           85       163         94\n",
-       "48  2008           83       190         99\n",
-       "49  2009           79       151         88\n",
-       "50  2010           88       295        122\n",
+       "             year  temperature  rainfall  mosquitos\n",
+       "location                                           \n",
+       "A1       0   2001           80       157        150\n",
+       "         1   2002           85       252        217\n",
+       "         2   2003           86       154        153\n",
+       "         3   2004           87       159        158\n",
+       "         4   2005           74       292        243\n",
+       "         5   2006           75       283        237\n",
+       "         6   2007           80       214        190\n",
+       "         7   2008           85       197        181\n",
+       "         8   2009           74       231        200\n",
+       "         9   2010           74       207        184\n",
+       "A3       0   1960           76       191         93\n",
+       "         1   1961           73       249        109\n",
+       "         2   1962           81       112         73\n",
+       "         3   1963           78       113         72\n",
+       "         4   1964           81       159         89\n",
+       "         5   1965           87       222        109\n",
+       "         6   1966           72       103         68\n",
+       "         7   1967           77       176         92\n",
+       "         8   1968           89       236        114\n",
+       "         9   1969           88       283        128\n",
+       "         10  1970           89       151         89\n",
+       "         11  1971           71       121         72\n",
+       "         12  1972           88       267        124\n",
+       "         13  1973           85       211        102\n",
+       "         14  1974           75       101         67\n",
+       "         15  1975           72       173         85\n",
+       "         16  1976           74       254        117\n",
+       "         17  1977           85       155         90\n",
+       "         18  1978           89       158         92\n",
+       "         19  1979           86       117         75\n",
+       "...           ...          ...       ...        ...\n",
+       "B1       21  1981           77       115         77\n",
+       "         22  1982           71       267        106\n",
+       "         23  1983           89       164         99\n",
+       "         24  1984           75       175         90\n",
+       "         25  1985           70       210         95\n",
+       "         26  1986           72       214         99\n",
+       "         27  1987           79       123         81\n",
+       "         28  1988           74       195         96\n",
+       "         29  1989           84       129         90\n",
+       "         30  1990           80       276        111\n",
+       "         31  1991           73       147         82\n",
+       "         32  1992           73       140         80\n",
+       "         33  1993           78       285        115\n",
+       "         34  1994           71       280        107\n",
+       "         35  1995           80       180         95\n",
+       "         36  1996           90       280        119\n",
+       "         37  1997           86       166        100\n",
+       "         38  1998           82       285        117\n",
+       "         39  1999           75       215        101\n",
+       "         40  2000           86       212        101\n",
+       "         41  2001           72       138         83\n",
+       "         42  2002           84       130         85\n",
+       "         43  2003           74       166         87\n",
+       "         44  2004           87       280        121\n",
+       "         45  2005           85       130         88\n",
+       "         46  2006           83       102         77\n",
+       "         47  2007           85       163         94\n",
+       "         48  2008           83       190         99\n",
+       "         49  2009           79       151         88\n",
+       "         50  2010           88       295        122\n",
        "\n",
        "[214 rows x 4 columns]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
