--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -5853,6 +5853,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['B1', 'B1', 'B1']"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[filename.split('_')[0]] * 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "filenames = glob.glob('*.csv')\n",
+    "datas = []\n",
+    "\n",
+    "for filename in filenames:\n",
+    "    data = pd.read_csv(filename)\n",
+    "    data['location'] = [filename.split('_')[0]] * len(data)\n",
+    "    \n",
+    "    \n",
+    "df = pd.concat(datas, keys=keys, names=['location'])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 85,
    "metadata": {
     "collapsed": false
