--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -7173,256 +7173,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 101,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>year</th>\n",
-       "      <th>temperature</th>\n",
-       "      <th>rainfall</th>\n",
-       "      <th>mosquitos</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>location</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">A1</th>\n",
-       "      <th>5</th>\n",
-       "      <td>2006</td>\n",
-       "      <td>75</td>\n",
-       "      <td>283</td>\n",
-       "      <td>237</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>2007</td>\n",
-       "      <td>80</td>\n",
-       "      <td>214</td>\n",
-       "      <td>190</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>2008</td>\n",
-       "      <td>85</td>\n",
-       "      <td>197</td>\n",
-       "      <td>181</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>2009</td>\n",
-       "      <td>74</td>\n",
-       "      <td>231</td>\n",
-       "      <td>200</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>2010</td>\n",
-       "      <td>74</td>\n",
-       "      <td>207</td>\n",
-       "      <td>184</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">A3</th>\n",
-       "      <th>46</th>\n",
-       "      <td>2006</td>\n",
-       "      <td>78</td>\n",
-       "      <td>112</td>\n",
-       "      <td>71</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>47</th>\n",
-       "      <td>2007</td>\n",
-       "      <td>75</td>\n",
-       "      <td>212</td>\n",
-       "      <td>103</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48</th>\n",
-       "      <td>2008</td>\n",
-       "      <td>87</td>\n",
-       "      <td>186</td>\n",
-       "      <td>98</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49</th>\n",
-       "      <td>2009</td>\n",
-       "      <td>79</td>\n",
-       "      <td>153</td>\n",
-       "      <td>84</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50</th>\n",
-       "      <td>2010</td>\n",
-       "      <td>84</td>\n",
-       "      <td>199</td>\n",
-       "      <td>101</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">B2</th>\n",
-       "      <th>46</th>\n",
-       "      <td>2006</td>\n",
-       "      <td>79</td>\n",
-       "      <td>201</td>\n",
-       "      <td>199</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>47</th>\n",
-       "      <td>2007</td>\n",
-       "      <td>85</td>\n",
-       "      <td>227</td>\n",
-       "      <td>220</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48</th>\n",
-       "      <td>2008</td>\n",
-       "      <td>74</td>\n",
-       "      <td>206</td>\n",
-       "      <td>200</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49</th>\n",
-       "      <td>2009</td>\n",
-       "      <td>77</td>\n",
-       "      <td>260</td>\n",
-       "      <td>240</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50</th>\n",
-       "      <td>2010</td>\n",
-       "      <td>89</td>\n",
-       "      <td>242</td>\n",
-       "      <td>236</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">A2</th>\n",
-       "      <th>46</th>\n",
-       "      <td>2006</td>\n",
-       "      <td>88</td>\n",
-       "      <td>255</td>\n",
-       "      <td>226</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>47</th>\n",
-       "      <td>2007</td>\n",
-       "      <td>79</td>\n",
-       "      <td>262</td>\n",
-       "      <td>221</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48</th>\n",
-       "      <td>2008</td>\n",
-       "      <td>73</td>\n",
-       "      <td>198</td>\n",
-       "      <td>176</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49</th>\n",
-       "      <td>2009</td>\n",
-       "      <td>86</td>\n",
-       "      <td>215</td>\n",
-       "      <td>187</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50</th>\n",
-       "      <td>2010</td>\n",
-       "      <td>87</td>\n",
-       "      <td>127</td>\n",
-       "      <td>129</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">B1</th>\n",
-       "      <th>46</th>\n",
-       "      <td>2006</td>\n",
-       "      <td>83</td>\n",
-       "      <td>102</td>\n",
-       "      <td>77</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>47</th>\n",
-       "      <td>2007</td>\n",
-       "      <td>85</td>\n",
-       "      <td>163</td>\n",
-       "      <td>94</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48</th>\n",
-       "      <td>2008</td>\n",
-       "      <td>83</td>\n",
-       "      <td>190</td>\n",
-       "      <td>99</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49</th>\n",
-       "      <td>2009</td>\n",
-       "      <td>79</td>\n",
-       "      <td>151</td>\n",
-       "      <td>88</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50</th>\n",
-       "      <td>2010</td>\n",
-       "      <td>88</td>\n",
-       "      <td>295</td>\n",
-       "      <td>122</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "             year  temperature  rainfall  mosquitos\n",
-       "location                                           \n",
-       "A1       5   2006           75       283        237\n",
-       "         6   2007           80       214        190\n",
-       "         7   2008           85       197        181\n",
-       "         8   2009           74       231        200\n",
-       "         9   2010           74       207        184\n",
-       "A3       46  2006           78       112         71\n",
-       "         47  2007           75       212        103\n",
-       "         48  2008           87       186         98\n",
-       "         49  2009           79       153         84\n",
-       "         50  2010           84       199        101\n",
-       "B2       46  2006           79       201        199\n",
-       "         47  2007           85       227        220\n",
-       "         48  2008           74       206        200\n",
-       "         49  2009           77       260        240\n",
-       "         50  2010           89       242        236\n",
-       "A2       46  2006           88       255        226\n",
-       "         47  2007           79       262        221\n",
-       "         48  2008           73       198        176\n",
-       "         49  2009           86       215        187\n",
-       "         50  2010           87       127        129\n",
-       "B1       46  2006           83       102         77\n",
-       "         47  2007           85       163         94\n",
-       "         48  2008           83       190         99\n",
-       "         49  2009           79       151         88\n",
-       "         50  2010           88       295        122"
+       "81.040000000000006"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[df['year'] > 2005]"
+    "df[df['year'] > 2005]['temperature'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "location\n",
+       "A1    77.6\n",
+       "A3    80.6\n",
+       "B2    80.8\n",
+       "A2    82.6\n",
+       "B1    83.6\n",
+       "Name: temperature, dtype: float64"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['year'] > 2005]['temperature'].mean(level='location')"
    ]
   }
  ],
