--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -7223,6 +7223,90 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "location    \n",
+       "A1        0     False\n",
+       "          1     False\n",
+       "          2     False\n",
+       "          3     False\n",
+       "          4     False\n",
+       "          5     False\n",
+       "          6     False\n",
+       "          7     False\n",
+       "          8     False\n",
+       "          9     False\n",
+       "A3        0     False\n",
+       "          1     False\n",
+       "          2     False\n",
+       "          3     False\n",
+       "          4     False\n",
+       "          5     False\n",
+       "          6     False\n",
+       "          7     False\n",
+       "          8     False\n",
+       "          9     False\n",
+       "          10    False\n",
+       "          11    False\n",
+       "          12    False\n",
+       "          13    False\n",
+       "          14    False\n",
+       "          15    False\n",
+       "          16    False\n",
+       "          17     True\n",
+       "          18     True\n",
+       "          19     True\n",
+       "                ...  \n",
+       "B1        21     True\n",
+       "          22     True\n",
+       "          23     True\n",
+       "          24     True\n",
+       "          25     True\n",
+       "          26    False\n",
+       "          27    False\n",
+       "          28    False\n",
+       "          29    False\n",
+       "          30    False\n",
+       "          31    False\n",
+       "          32    False\n",
+       "          33    False\n",
+       "          34    False\n",
+       "          35    False\n",
+       "          36    False\n",
+       "          37    False\n",
+       "          38    False\n",
+       "          39    False\n",
+       "          40    False\n",
+       "          41    False\n",
+       "          42    False\n",
+       "          43    False\n",
+       "          44    False\n",
+       "          45    False\n",
+       "          46    False\n",
+       "          47    False\n",
+       "          48    False\n",
+       "          49    False\n",
+       "          50    False\n",
+       "Name: year, dtype: bool"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(df['year'] < 1986) & (df['year'] > 1976)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 103,
    "metadata": {
     "collapsed": false
