--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -7225,7 +7225,8 @@
    "cell_type": "code",
    "execution_count": 105,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [
     {
